@@ -1,5 +1,5 @@
 /*
- *  Copyright (c) 2020, 2022, Oracle and/or its affiliates. All rights reserved.
+ *  Copyright (c) 2020, 2023, Oracle and/or its affiliates. All rights reserved.
  *  DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  *  This code is free software; you can redistribute it and/or modify it
@@ -34,10 +34,10 @@ import jdk.internal.foreign.FunctionDescriptorImpl;
 import jdk.internal.javac.PreviewFeature;
 
 /**
- * A function descriptor models the signature of foreign functions. A function descriptor is made up of zero or more
- * argument layouts and zero or one return layout. A function descriptor is typically used when creating
- * {@linkplain Linker#downcallHandle(MemorySegment, FunctionDescriptor, Linker.Option...) downcall method handles} or
- * {@linkplain Linker#upcallStub(MethodHandle, FunctionDescriptor, SegmentScope) upcall stubs}.
+ * A function descriptor models the signature of a foreign function. A function descriptor is made up of zero or more
+ * argument layouts, and zero or one return layout. A function descriptor is used to create
+ * {@linkplain Linker#downcallHandle(MemorySegment, FunctionDescriptor, Linker.Option...) downcall method handles} and
+ * {@linkplain Linker#upcallStub(MethodHandle, FunctionDescriptor, Arena, Linker.Option...) upcall stubs}.
  *
  * @implSpec
  * Implementing classes are immutable, thread-safe and <a href="{@docRoot}/java.base/java/lang/doc-files/ValueBased.html">value-based</a>.
@@ -49,20 +49,21 @@ import jdk.internal.javac.PreviewFeature;
 public sealed interface FunctionDescriptor permits FunctionDescriptorImpl {
 
     /**
-     * {@return the return layout (if any) associated with this function descriptor}
+     * {@return the return layout (if any) of this function descriptor}
      */
     Optional<MemoryLayout> returnLayout();
 
     /**
-     * {@return the argument layouts associated with this function descriptor (as an immutable list)}.
+     * {@return the argument layouts of this function descriptor (as an unmodifiable list)}.
      */
     List<MemoryLayout> argumentLayouts();
 
     /**
-     * Returns a function descriptor with the given argument layouts appended to the argument layout array
+     * Returns a function descriptor with the given argument layouts appended to the argument layouts
      * of this function descriptor.
      * @param addedLayouts the argument layouts to append.
-     * @return the new function descriptor.
+     * @throws IllegalArgumentException if one of the layouts in {@code addedLayouts} is a padding layout.
+     * @return a new function descriptor, with the provided additional argument layouts.
      */
     FunctionDescriptor appendArgumentLayouts(MemoryLayout... addedLayouts);
 
@@ -71,38 +72,38 @@ public sealed interface FunctionDescriptor permits FunctionDescriptorImpl {
      * layout array of this function descriptor.
      * @param index the index at which to insert the arguments
      * @param addedLayouts the argument layouts to insert at given index.
-     * @return the new function descriptor.
+     * @return a new function descriptor, with the provided additional argument layouts.
+     * @throws IllegalArgumentException if one of the layouts in {@code addedLayouts} is a padding layout.
      * @throws IllegalArgumentException if {@code index < 0 || index > argumentLayouts().size()}.
      */
     FunctionDescriptor insertArgumentLayouts(int index, MemoryLayout... addedLayouts);
 
     /**
-     * Returns a function descriptor with the given memory layout as the new return layout.
+     * Returns a function descriptor with the provided return layout.
      * @param newReturn the new return layout.
-     * @return the new function descriptor.
+     * @throws IllegalArgumentException if {@code newReturn} is a padding layout.
+     * @return a new function descriptor, with the provided return layout.
      */
     FunctionDescriptor changeReturnLayout(MemoryLayout newReturn);
 
     /**
-     * Returns a function descriptor with the return layout dropped. This is useful to model functions
-     * which return no values.
-     * @return the new function descriptor.
+     * {@return a new function descriptor, with no return layout}
      */
     FunctionDescriptor dropReturnLayout();
 
     /**
      * Returns the method type consisting of the carrier types of the layouts in this function descriptor.
      * <p>
-     * The carrier type of a layout is determined as follows:
+     * The carrier type of a layout {@code L} is determined as follows:
      * <ul>
-     * <li>If the layout is a {@link ValueLayout} the carrier type is determined through {@link ValueLayout#carrier()}.</li>
-     * <li>If the layout is a {@link GroupLayout} the carrier type is {@link MemorySegment}.</li>
-     * <li>If the layout is a {@link PaddingLayout}, or {@link SequenceLayout} an {@link IllegalArgumentException} is thrown.</li>
+     * <li>If {@code L} is a {@link ValueLayout} the carrier type is determined through {@link ValueLayout#carrier()}.</li>
+     * <li>If {@code L} is a {@link GroupLayout} or a {@link SequenceLayout}, the carrier type is {@link MemorySegment}.</li>
      * </ul>
      *
-     * @return the method type consisting of the carrier types of the layouts in this function descriptor
-     * @throws IllegalArgumentException if one or more layouts in the function descriptor can not be mapped to carrier
-     *                                  types (e.g. if they are sequence layouts or padding layouts).
+     * @apiNote A function descriptor cannot, by construction, contain any padding layouts. As such, it is not
+     * necessary to specify how padding layout should be mapped to carrier types.
+     *
+     * @return the method type consisting of the carrier types of the layouts in this function descriptor.
      */
     MethodType toMethodType();
 
@@ -110,7 +111,9 @@ public sealed interface FunctionDescriptor permits FunctionDescriptorImpl {
      * Creates a function descriptor with the given return and argument layouts.
      * @param resLayout the return layout.
      * @param argLayouts the argument layouts.
-     * @return the new function descriptor.
+     * @throws IllegalArgumentException if {@code resLayout} is a padding layout.
+     * @throws IllegalArgumentException if one of the layouts in {@code argLayouts} is a padding layout.
+     * @return a new function descriptor with the provided return and argument layouts.
      */
     static FunctionDescriptor of(MemoryLayout resLayout, MemoryLayout... argLayouts) {
         Objects.requireNonNull(resLayout);
@@ -119,9 +122,11 @@ public sealed interface FunctionDescriptor permits FunctionDescriptorImpl {
     }
 
     /**
-     * Creates a function descriptor with the given argument layouts and no return layout.
+     * Creates a function descriptor with the given argument layouts and no return layout.  This is useful to model functions
+     * that return no values.
      * @param argLayouts the argument layouts.
-     * @return the new function descriptor.
+     * @throws IllegalArgumentException if one of the layouts in {@code argLayouts} is a padding layout.
+     * @return a new function descriptor with the provided argument layouts.
      */
     static FunctionDescriptor ofVoid(MemoryLayout... argLayouts) {
         // Null checks are implicit in List.of(argLayouts)
